--- a/emacs.org
+++ b/emacs.org
@@ -755,8 +755,10 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
     (defun koek-wm/make-firefox-record ()
       (let* ((page (koek-wm/get-firefox-page))
              (url (or (plist-get page :url) (user-error "Not visiting a URL")))
-             (title (plist-get page :title)))
-        (koek-bmrk/generic-url-record url title)))
+             (title (plist-get page :title))
+             (normalized (when title
+                           (koek-subr/normalize-title title))))
+        (koek-bmrk/generic-url-record url normalized)))
 
     (defun koek-wm/setup-current ()
       (cond
@@ -5919,8 +5921,10 @@ For shell configuration, see [[file:dotfiles.org::*Bash][Bash]].
     (defun koek-eww/make-record ()
       (let* ((page (koek-eww/get-page))
              (url (or (plist-get page :url) (user-error "Not visiting a URL")))
-             (title (plist-get page :title)))
-        (koek-bmrk/generic-url-record url title)))
+             (title (plist-get page :title))
+             (normalized (when title
+                           (koek-subr/normalize-title title))))
+        (koek-bmrk/generic-url-record url normalized)))
 
     (defun koek-eww/setup-current ()
       (setq-local bookmark-make-record-function #'koek-eww/make-record))
