--- a/emacs.org
+++ b/emacs.org
@@ -3107,6 +3107,17 @@ Upgrade case commands.
    ([remap capitalize-word] . capitalize-dwim))
 #+END_SRC
 
+#+BEGIN_SRC emacs-lisp
+  (defun koek-word/title-case-region (begin end)
+    (interactive "r")
+    (save-excursion
+      (let ((title (buffer-substring-no-properties begin end)))
+        (delete-region begin end)
+        (insert (koek-subr/title-case title)))))
+
+  (bind-key "C-c e t" #'koek-word/title-case-region)
+#+END_SRC
+
 *** subword - Recognize words in camel case words
 #+BEGIN_SRC emacs-lisp
   (use-package subword
