[emacs] Tweak docstring

--- a/emacs.org
+++ b/emacs.org
@@ -6901,7 +6901,7 @@ Stavrou)]].
 
     (defun koek-bngo/play-pause ()
       "Pause or resume playback.
-  When playback is stopped, play from beginning."
+  When playback is stopped, play from beginning of playlist."
       (interactive)
       (if (bongo-playing-p)
           (bongo-pause/resume)
