[emacs] Simplify checking if string is empty

--- a/emacs.org
+++ b/emacs.org
@@ -8546,7 +8546,7 @@ windows and continues in the mode line.
       (mapcar (lambda (workspace)
                 (let ((n (nth 0 workspace))
                       (name (let ((name (nth 2 workspace)))
-                              (unless (string-equal name "")
+                              (unless (string-empty-p name)
                                 name))))
                   (list :n n
                         :label (concat (or (koek-subr/arabic-to-roman n) "N")
