--- a/emacs.org
+++ b/emacs.org
@@ -8723,7 +8723,7 @@ windows and continues in the mode line.
                  (n-diffs ediff-number-of-differences))
              (cond
               ((< diff-n 1)
-               (format "Start -/%d" n-diffs))
+               (format "Begin -/%d" n-diffs))
               ((> diff-n n-diffs)
                (format "End -/%d" n-diffs))
               (t
