[emacs] Fix indentation

--- a/emacs.org
+++ b/emacs.org
@@ -8745,18 +8745,12 @@ windows and continues in the mode line.
                          (ediff-get-state-of-diff ediff-current-difference
                                                   type))))
                   (pcase diff
-                    ("prefer-A"
-                     "=B")
-                    ("prefer-B"
-                     "=A")
-                    ("=diff(A)"
-                     "=A")
-                    ("=diff(B)"
-                     "=B")
-                    ("=diff(C)"
-                     "=C")
-                    ("=diff(A+B)"
-                     "=A+B"))))
+                    ("prefer-A"   "=B")
+                    ("prefer-B"   "=A")
+                    ("=diff(A)"   "=A")
+                    ("=diff(B)"   "=B")
+                    ("=diff(C)"   "=C")
+                    ("=diff(A+B)" "=A+B"))))
                (merge (when (eq type 'C)
                         (ediff-get-state-of-merge ediff-current-difference)))
                (ancestor
