[emacs] Normalize title captured book

--- a/emacs.org
+++ b/emacs.org
@@ -9084,7 +9084,7 @@ Configure org capture templates.
                            "\n")
              :empty-lines 1)
             ("b" "Book" item (file+olp "Inbox.org" "Media tips" "Boeken")
-             "- [[%:link][%(replace-regexp-in-string (rx (one-or-more \"\\n\")) \" \" \"%i\")]]%?")))
+             "- [[%:link][%(koek-subr/normalize-title \"%i\")]]%?")))
     (setq org-capture-templates-contexts '(("r" ((in-mode . "mu4e-view-mode"))))))
 #+END_SRC
 
