[emacs] Make id mode line more robust

--- a/emacs.org
+++ b/emacs.org
@@ -8576,7 +8576,8 @@ windows and continues in the mode line.
       '(:eval
         (moody-tab
          (concat
-          (when (derived-mode-p 'prog-mode 'conf-mode)
+          (when (and (fboundp 'project-current)
+                     (derived-mode-p 'prog-mode 'conf-mode))
             (when-let ((name (koek-proj/get-name)))
               (concat (koek-subr/elide name 16) "/")))
           (propertize (koek-subr/elide (buffer-name) 32)
